--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,10 +3,10 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #fff;
+    --foreground: #0a0a0a;
   }
 }
 
