--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,10 +5,22 @@
 
 @media (prefers-color-scheme: light) {
   :root {
-    --background: #fff;
+    --background: #ffffff;
     --foreground: #0a0a0a;
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #171717;
+    --foreground: #ffffff;
+  }
+
+  html {
+    color-scheme: dark;
+  }
+}
+
 
 html,
 body {
@@ -25,18 +37,9 @@ body {
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  @apply box-border p-0 m-0;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+  @apply text-inherit no-underline;
 }
